[Suraj] : Refactor product-service - add product validation, search criteria, and inventory gateway support